@@ -138,7 +138,7 @@ static void print_hash(HashTable *ht, int indent, zend_bool is_object TSRMLS_DC)
 				if (is_object) {
 					char *prop_name, *class_name;
 
-					unmangle_property_name(string_key, &class_name, &prop_name);
+					zend_unmangle_property_name(string_key, &class_name, &prop_name);
 					ZEND_PUTS(prop_name);
 					if (class_name) {
 						if (class_name[0]=='*') {
